v0.14.0/_sources/projections/conic/conic_lambert.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "projections/conic/conic_lambert.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_projections_conic_conic_lambert.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_projections_conic_conic_lambert.py:


Lambert conic conformal projection
==================================

This conic projection was designed by the Alsatian mathematician Johann
Heinrich Lambert (1772) and has been used extensively for mapping of regions
with predominantly east-west orientation, just like the Albers projection.
Unlike the Albers projection, Lambert's conformal projection is not equal-area.
The parallels are arcs of circles with a common origin, and meridians are the
equally spaced radii of these circles. As with Albers projection, it is only
the two standard parallels that are distortion-free.

**l**\ *lon0/lat0*\ /\ *lat1/lat2*\ */scale*
or **L**\ *lon0/lat0*\ /\ *lat1/lat2*\ */width*

The projection is set with **l** or **L**. The projection center is set by
*lon0/lat0* and two standard parallels for the map are set with *lat1/lat2*.
The figure size is set with *scale* or *width*.

.. GENERATED FROM PYTHON SOURCE LINES 22-34



.. image-sg:: /projections/conic/images/sphx_glr_conic_lambert_001.png
   :alt: conic lambert
   :srcset: /projections/conic/images/sphx_glr_conic_lambert_001.png
   :class: sphx-glr-single-img





.. code-block:: Python

    import pygmt

    fig = pygmt.Figure()
    fig.coast(
        region=[-130, -70, 24, 52],
        projection="L-100/35/33/45/12c",
        frame="afg",
        land="seagreen",
        water="gray90",
    )

    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.193 seconds)


.. _sphx_glr_download_projections_conic_conic_lambert.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: conic_lambert.ipynb <conic_lambert.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: conic_lambert.py <conic_lambert.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: conic_lambert.zip <conic_lambert.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
